Added boostrap layout to the webapp.

--- a/web_app/templates/books.html
+++ b/web_app/templates/books.html
@@ -1,10 +1,27 @@
+<!-- web_app/templates/books.html -->
 
-    <h1>My Books Page</h1>
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "books" %}
+
+{% block title %}
+    <title>Books Page</title>
+{% endblock %}
+
+{% block content %}
+
+    <h2>Welcome to the Books Page</h2>
 
     <p>{{ message }}</p>
 
-    <ul>
+    {% if books %}
+        <ul>
         {% for book in books %}
             <li>{{ book["title"] }}</li>
         {% endfor %}
-    </ul>
+        </ul>
+
+    {% else %}
+        <p>Books not found.</p>
+    {% endif %}
+
+{% endblock %}
