Added flash messaging and a redirect

--- a/web_app/templates/new_book.html
+++ b/web_app/templates/new_book.html
@@ -1,7 +1,7 @@
 <!-- web_app/templates/new_book.html -->
 
 {% extends "bootstrap_layout.html" %}
-{% set active_page = "new_books" %}
+{% set active_page = "new_book" %}
 
 {% block content %}
 
