--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -29,7 +29,8 @@
     <!-- see: https://getbootstrap.com/docs/4.0/components/navbar/ -->
     {% set nav_links = [
       ('/books', 'books', 'Books'),
-      ('/books/new', 'new_book', 'New Book')
+      ('/books/new', 'new_book', 'New Book'),
+      ('/stats/predict', 'prediction_form', 'Make a Prediction')
     ] -%}
     {% set active_page = active_page|default('index') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
