Make predictions (working)

--- a/web_app/templates/prediction_results.html
+++ b/web_app/templates/prediction_results.html
@@ -1,6 +1,6 @@
 
 
-{% extends "bootstrap_layoutlayout.html" %}
+{% extends "bootstrap_layout.html" %}
 
 {% block content %}
     <h2>Results!</h2>
