--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -30,7 +30,8 @@
     {% set nav_links = [
       ('/books', 'books', 'Books'),
       ('/books/new', 'new_book', 'New Book'),
-      ('/stats/predict', 'prediction_form', 'Make a Prediction')
+      ('/stats/predict', 'prediction_form', 'Make a Prediction'),
+      ('/users', 'users', 'Users')
     ] -%}
     {% set active_page = active_page|default('index') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
