Added error handling for users that don't exist

--- a/web_app/templates/new_book.html
+++ b/web_app/templates/new_book.html
@@ -12,14 +12,10 @@
     <form action="/books/create" method="POST">
 
         <label>Title:</label>
-        <input type="text" name="book_title" placeholder="Book XYZ" value="Book XYZ">
+        <input type="text" name="book_title" placeholder="Mistborn" value="Mistborn">
 
         <label>Author:</label>
-        <select name="author_name">
-          <option value="A1">Author 1</option>
-          <option value="A2">Author 2</option>
-          <option value="A3">Author 3</option>
-        </select>
+        <input type="text" name="author_name" placeholder="Brandon Sanderson" value="Brandon Sanderson">
 
         <button>Submit</button>
     </form>
