--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -28,10 +28,10 @@
     <!-- see: https://jinja.palletsprojects.com/en/2.11.x/tricks/ -->
     <!-- see: https://getbootstrap.com/docs/4.0/components/navbar/ -->
     {% set nav_links = [
+      ('/stats/predict', 'prediction_form', 'Make a Prediction'),
+      ('/users', 'users', 'Users'),
       ('/books', 'books', 'Books'),
       ('/books/new', 'new_book', 'New Book'),
-      ('/stats/predict', 'prediction_form', 'Make a Prediction'),
-      ('/users', 'users', 'Users')
     ] -%}
     {% set active_page = active_page|default('index') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
