--- a/web_app/templates/books.html
+++ b/web_app/templates/books.html
@@ -16,7 +16,7 @@
     {% if books %}
         <ul>
         {% for book in books %}
-            <li>{{ book.title }}</li>
+            <li>{{ book.title }} by {{ book.author_id }}</li>
         {% endfor %}
         </ul>
 
