--- a/web_app/templates/users.html
+++ b/web_app/templates/users.html
@@ -25,7 +25,7 @@
 
     <form action="/users" method="POST">
 
-        <label>Title:</label>
+        <label>User:</label>
         <input type="text" name="screen_name" placeholder="JimGaffigan" value="JimGaffigan">
 
         <button>Submit</button>
