--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -68,8 +68,8 @@
       <!-- FOOTER -->
       <div id="footer">
         <hr>
-        &copy; Copyright 2019 Prof. MJ Rossetti |
-        <a href="https://github.com/prof-rossetti/">source</a>
+        &copy; Copyright 2020 Ethan Holden |
+        <a href="https://github.com/mahoryu/DSPT4_3.3_Productization">source</a>
       </div>
     </div>
 
